@@ -33,6 +33,7 @@ Version 1.4.22 - SVN
   - Allow administrators to configure subfolders of user INBOXes to be
     treated as special folders by adding $subfolders_of_inbox_are_special
     to config_local.php.
+  - Fixed incorrect display of INBOX subfolders under some configurations.
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
